--- a/Fundamentos/javascript-trabalhando-com-elementos/atividade-pos-aula/index.html
+++ b/Fundamentos/javascript-trabalhando-com-elementos/atividade-pos-aula/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>Exercício</title>
     <style>
+     .teste{
+        color: blueviolet;
+        text-align: center;
+     }
+    
       section {
         border-color: black;
         border-style: solid;
@@ -57,7 +62,20 @@
   </head>
   <body>
     <script>
-      // COLOQUE SEU CÓDIGO AQUI
+        const body = document.getElementsByTagName('body')[0];
+        // Adicione a tag h1 com o texto TrybeTrip - Agência de Viagens como filho da tag body;
+        const h1 = document.createElement('h1');
+        h1.innerHTML = 'TrybeTrip - Agência de Viagens';
+        h1.className = 'teste';
+        body.appendChild(h1);
+        // Adicione a tag main com a classe main-content como filho da tag body;
+        // Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
+        // Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+        // Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+        // Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
+        // Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image. Esse elemento deve ser filho do section criado no passo 5;
+        // Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um, dois, três, … como valores da lista. Essa lista deve ser filha do section criado no passo 6;
+        // Adicione 3 tags h3, todas sendo filhas do main criado no passo 2.
     </script>
   </body>
 </html>
