Adicionado tag main, primeira section e um paragrafo filho de section

--- a/Fundamentos/javascript-trabalhando-com-elementos/atividade-pos-aula/index.html
+++ b/Fundamentos/javascript-trabalhando-com-elementos/atividade-pos-aula/index.html
@@ -64,14 +64,27 @@
     <script>
         const body = document.getElementsByTagName('body')[0];
         // Adicione a tag h1 com o texto TrybeTrip - Agência de Viagens como filho da tag body;
-        const h1 = document.createElement('h1');
-        h1.innerHTML = 'TrybeTrip - Agência de Viagens';
-        h1.className = 'teste';
-        body.appendChild(h1);
+        const createH1 = document.createElement('h1');
+        createH1.innerHTML = 'TrybeTrip - Agência de Viagens';
+        createH1.className = 'teste';
+        body.appendChild(createH1);
         // Adicione a tag main com a classe main-content como filho da tag body;
+        const createMain = document.createElement('main');
+        createMain.className = 'main-content';
+        body.appendChild(createMain);
         // Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
-        // Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
         // Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+        const main = document.querySelector('.main-content');
+        const createSection = document.createElement('section');
+        createSection.className = 'center-content';
+        main.appendChild(createSection);
+
+        // Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+        const section = document.querySelector('.main-content');
+        const createP = document.createElement('p');
+        createP.innerText = 'Adicionando algum texto para teste';
+        section.firstChild.appendChild(createP);
+        
         // Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
         // Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image. Esse elemento deve ser filho do section criado no passo 5;
         // Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um, dois, três, … como valores da lista. Essa lista deve ser filha do section criado no passo 6;
