Estilização do exercicio

--- a/Fundamentos/Dia 01: HTML & CSS - Forms/Atividade pré-aula/01/index.html
+++ b/Fundamentos/Dia 01: HTML & CSS - Forms/Atividade pré-aula/01/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Login</title>
   </head>
   <body>
-    <form action="" method="get">
-      <label for="user">Usuário:
-      	<input type="email" name="email" id="user" placeholder="Digite seu email" required autocomplet="off" autofocus/>
-      </label>
-			<br/>
-      <label for="password">Senha:
-     		<input type="password" name="password" id="password" placeholder="Digite sua senha" required/>
-			</label>
-			<br/>
-      <label for="remenber">
-				<input type="checkbox" name="remenber" id="remenber">Lembre-me
-			</label>
-			<br>
-      <input type="submit" value="Entrar">
-    </form>
+    <div id="form">
+      <form action="" method="get">
+        <label for="user">Usuário:
+          <input type="email" name="email" id="user" placeholder="Digite seu email" required autocomplet="off" autofocus/>
+        </label>
+        <br/>
+        <label for="password">Senha:
+          <input type="password" name="password" id="password" placeholder="Digite sua senha" required/>
+        </label>
+        <br/>
+        <label for="remenber">
+          <input type="checkbox" name="remenber" id="remenber">Lembre-me
+        </label>
+        <br>
+        <input type="submit" value="Entrar">
+      </form>
+  </div>
   </body>
 </html>
 
