--- a/Fundamentos/Dia 01: HTML & CSS - Forms/Atividade pós aula/form.html
+++ b/Fundamentos/Dia 01: HTML & CSS - Forms/Atividade pós aula/form.html
@@ -67,8 +67,8 @@
             </fieldset>
 
             <div class="buttons">
-                <button type="submit">Enviar</button>
-                <button type="reset">Enviar</button>
+                <button type="submit" id="submit" disabled>Enviar</button>
+                <button type="reset" id="reset">Limpar</button>
             </div>
 
         </form>
